<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lddmproject.lddmproject.eventRegistration">

    <EditText
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eventName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventBegin"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/eventName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dateBegin"
        android:onClick="showBeginDatePickerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/begin"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/timeBegin"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.545" />

    <Button
        android:id="@+id/timeBegin"
        android:onClick="showBeginTimePickerDialog"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:ems="10"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/begin" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventEnd"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dateBegin"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dateEnd"
        android:onClick="showEndDatePickerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/end"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/timeEnd"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/timeEnd"
        android:onClick="showEndTimePickerDialog"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:ems="10"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/end" />

    <TextView
        android:id="@+id/organizers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventOrganizers"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dateEnd"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/organizersBox"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/organizersButton"
        app:layout_constraintTop_toBottomOf="@+id/organizers" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventParticipants"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/organizersBox"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/participantsBox"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/participantsButton"
        app:layout_constraintTop_toBottomOf="@+id/participants" />


    <Button
        android:id="@+id/organizersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="addOrganizer"
        android:text="Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organizers" />

    <Button
        android:id="@+id/participantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addParticipant"
        android:text="Button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/participants"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addEvent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/eventAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantsBox"
        app:layout_constraintVertical_bias="0.533" />


</android.support.constraint.ConstraintLayout>
